--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "migrate": "npx prisma migrate dev --name init"
+    "migrate": "npx prisma migrate dev --name init",
+    "seed": "npx prisma db seed --preview-feature"
   },
   "prisma": {
     "schema": "./src/prisma/schema.prisma"
@@ -14,7 +15,7 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@prisma/client": "^2.28.0",
+    "@prisma/client": "^2.21.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
@@ -31,6 +32,6 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "prisma": "^2.28.0"
+    "prisma": "^2.21.2"
   }
 }
