--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "dependencies": {
     "@prisma/client": "^2.21.2",
+    "aws-sdk": "^2.975.0",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
@@ -24,6 +26,7 @@
     "fastify-cors": "^6.0.2",
     "fastify-express": "^0.3.3",
     "fastify-helmet": "^5.3.2",
+    "fastify-multipart": "^4.0.7",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
