--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "fastify-express": "^0.3.3",
     "fastify-helmet": "^5.3.2",
     "fastify-multipart": "^4.0.7",
+    "firebase": "^9.5.0",
+    "firebase-admin": "^10.0.0",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
