--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "nodemailer": "^6.6.3",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "uuid": "^8.3.2"
   },
   "license": "ISC",
   "devDependencies": {
