--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "fastify": "^3.19.2",
     "fastify-cookie": "^5.3.1",
@@ -33,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "nodemailer": "^6.6.3",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^8.3.2"
   },
