--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
+    "npm start": "node server.js",
     "migrate": "npx prisma migrate dev --name init",
     "migrate-prod": "npx prisma migrate deploy",
     "seed": "npx prisma db seed"
