--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "nodemailer": "^6.7.2",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "nodemon": "^3.1.3",
     "uuid": "^8.3.2"
   },
   "license": "ISC",
