--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.609.0",
     "@prisma/client": "^3.13.0",
     "aws-sdk": "^2.1073.0",
     "axios": "^0.25.0",
@@ -44,6 +45,7 @@
     "nodemailer-mailgun-transport": "^2.1.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.1.3",
+    "uploadthing": "^6.13.2",
     "uuid": "^8.3.2"
   },
   "license": "ISC",
