--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yabure",
   "version": "1.0.0",
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   },
   "description": "",
   "main": "server.js",
@@ -22,19 +22,20 @@
   "author": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.609.0",
+    "@fastify/cookie": "^8.3.0",
+    "@fastify/cors": "^8.3.0",
+    "@fastify/helmet": "^10.1.1",
+    "@fastify/multipart": "^7.7.3",
+    "@fastify/passport": "^2.3.0",
+    "@fastify/secure-session": "^6.1.0",
     "@prisma/client": "^3.13.0",
-    "aws-sdk": "^2.1073.0",
     "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
-    "fastify": "^3.27.1",
-    "fastify-cookie": "^5.5.0",
-    "fastify-cors": "^6.0.2",
-    "fastify-express": "^0.3.3",
-    "fastify-helmet": "^5.3.2",
-    "fastify-multipart": "^4.0.7",
+    "fastify": "^4.17.0",
+    "fastify-plugin": "^5.0.1",
     "firebase": "^9.5.0",
     "firebase-admin": "^10.0.0",
     "joi": "^17.6.0",
@@ -45,6 +46,7 @@
     "nodemailer-mailgun-transport": "^2.1.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^3.1.3",
+    "passport-google-oauth20": "^2.0.0",
     "uploadthing": "^6.13.2",
     "uuid": "^8.3.2"
   },
