--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "fastify-plugin": "^5.0.1",
     "firebase": "^9.5.0",
     "firebase-admin": "^10.0.0",
+    "form-data": "^4.0.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mailgun.js": "^12.0.1",
+    "mailtrap": "^4.1.0",
     "nodemailer": "^6.7.2",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemailer-mailgun-transport": "^2.1.5",
